# spider_skills

./: Cargo.toml  README.md
codex-skills/spider-cli-extraction/: SKILL.md
codex-skills/spider-cli-extraction/agents/: openai.yaml
skills/api/: ai.md  crawl.md  links.md  parameters.md  scrape.md  screenshot.md  search.md  transform.md  unblocker.md
skills/automation/: arkose_funcaptcha.md  bot_detection.md  captcha_3d_object.md  captcha_audio_v2.md  click_order_captcha.md  color_matching.md  contact_extraction.md  cookie_consent.md  drag_drop_sorting.md  form_validation.md  hcaptcha.md  iframe_interaction.md  image_rotation_captcha.md  js_challenge_page.md  memory_card_game.md  object_counting.md  pagination_navigation.md  payment_form.md  popup_modal.md  product_listing.md  proof_of_work.md  puzzle_piece_captcha.md  rate_limiting.md  search_results.md  semantic_captcha.md  shape_sorting.md  sliding_tile_puzzle.md  table_extraction.md  tic_tac_toe.md  visual_pattern_captcha.md  word_search.md
skills/claude/: spider-cli-extraction.md
skills/codex/spider-cli-extraction/: SKILL.md
skills/codex/spider-cli-extraction/references/: cli-workflows.md
skills/codex/spider-cli-extraction/scripts/: spider_cli_helper.sh
skills/core/: spider-cli-extraction.md
src/: fetch.rs  lib.rs  s3.rs  web_challenges.rs
src/skills/: address_form.md  age_verification.md  audio_captcha.md  chart_data_extraction.md  cloudflare_turnstile.md  connect_the_dots.md  crossword.md  device_verification.md  drag_to_target.md  file_upload.md  fingerprint_challenge.md  geetest.md  honeypot_captcha.md  icon_captcha.md  image_grid.md  infinite_scroll.md  jigsaw_puzzle.md  lazy_loaded_content.md  login_wall.md  math_captcha.md  maze_solving.md  multi_step_form.md  number_sequence.md  otp_input.md  pattern_matching.md  paywall_detection.md  price_scraping.md  recaptcha_v2.md  recaptcha_v3.md  redirect_chain.md  rotation.md  sequence_ordering_captcha.md  slider_drag.md  spot_the_difference.md  sudoku.md  text_captcha.md  text_in_image_captcha.md  tic_tac_toe.md  web_form_autofill.md  word_search.md
