[package]
name = "spider_tactics"
version = "0.1.0"
authors = ["j-mendez <jeff@spider.cloud>"]
description = "Web automation tactics and strategies for spider's agent."
repository = "https://github.com/spider-rs/spider_tactics"
readme = "README.md"
keywords = ["agent", "tactics", "automation", "web", "strategies"]
categories = ["web-programming"]
license = "MIT"
documentation = "https://docs.rs/spider_tactics"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
spider_agent = { path = "../spider/spider_agent", features = ["skills"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = ["web_challenges"]

# Built-in web challenge skills (image grids, tic-tac-toe, word search, etc.)
web_challenges = []

# HTTP fetching of remote skill definitions
fetch = ["dep:reqwest"]

[dependencies.reqwest]
version = "0.12"
optional = true
features = ["json"]
