[package]
name = "spider_skills"
version = "0.1.5"
authors = ["j-mendez <jeff@spider.cloud>"]
description = "Skills and automation tactics for spider rust projects"
repository = "https://github.com/spider-rs/spider_skills"
readme = "README.md"
keywords = ["automation", "tactics", "web", "skills", "spider"]
categories = ["web-programming", "web-programming::http-client"]
license = "MIT"
documentation = "https://docs.rs/spider_skills"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = ["web_challenges"]

# Built-in web challenge skills (image grids, tic-tac-toe, word search, etc.)
web_challenges = []

# HTTP fetching of remote skill definitions
fetch = ["dep:reqwest"]

# Load skills from AWS S3
s3 = ["dep:aws-sdk-s3", "dep:aws-config"]

[dependencies.reqwest]
version = "0.12"
optional = true
features = ["json"]

[dependencies.aws-sdk-s3]
version = "1"
optional = true

[dependencies.aws-config]
version = "1"
optional = true
